<resources>
    <string name="app_name">androidregister</string>
    <string name="registration">Registration</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="month">Month</string>
    <string name="date">Date</string>
    <string name="year">Year</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="e_mail">E-Mail</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
</resources>